--- a/templates/default.html
+++ b/templates/default.html
@@ -31,21 +31,22 @@
                 <img id="logo" src="/images/others/menu.png" alt="Menu">
             </div>
             <ul class="nav-group nav-collapsed">
-                <li class="nav-item"><a href="/about.html">whoami</a></li>
-                <li class="nav-item"><a href="/contact.html">trashtalks</a></li>
-                <li class="nav-item"><a href="/archive.html">archive</a></li>
+                <li class="nav-item"><a href="/about">whoami</a></li>
+                <li class="nav-item"><a href="/archive.html">blog</a></li>
+                <li class="nav-item"><a href="/resume">resume</a></li>
             </ul>
         </div>
     </nav>
 
     <main>
         <div class ="content">
-            <h1>$title$</h1>
+            <!-- <h1>$title$</h1> -->
             $body$
         </div>
     </main>
 
     <!-- div class to maintain even amount of space in between main content and footer during browser resizing -->
+    <!-- https://stackoverflow.com/a/34146411/12347869 -->
     <div class="spacer"></div>
 
     <footer>
@@ -61,7 +62,7 @@
                     <a href="https://justinmanley.work/">justinmanley.work</a> and
                     <a href="https://joeahand.com/">joeahand.com</a>.
                     <br>
-                    Last Build: June 21, 2022
+                    Last Build: Feburary 12, 2023
                     <br>
                     Creative Commons License
                     <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
