--- a/templates/default.html
+++ b/templates/default.html
@@ -25,15 +25,15 @@
     <nav>
         <div class="nav-groups">
             <div class="nav-item">
-                <a class="nav-brand" href="../">ngzhankang.</a>
+                <a class="nav-brand" href="./">ngzhankang.</a>
             </div>
             <div class="nav-item nav-toggle">
                 <img id="logo" src="/images/others/menu.png" alt="Menu">
             </div>
             <ul class="nav-group nav-collapsed">
-                <li class="nav-item"><a href="../about">whoami</a></li>
-                <li class="nav-item"><a href="../archive.html">blog</a></li>
-                <li class="nav-item"><a href="../resume">resume</a></li>
+                <li class="nav-item"><a href="/about">whoami</a></li>
+                <li class="nav-item"><a href="/archive.html">blog</a></li>
+                <li class="nav-item"><a href="/resume">resume</a></li>
             </ul>
         </div>
     </nav>
