--- a/css/_base.scss
+++ b/css/_base.scss
@@ -5,7 +5,8 @@
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    font-family: $FiraSans;
+    // font-family: $FiraSans;
+    font-family: $Merriweather;
 }
 html, body {
     overflow-x: hidden;
