--- a/css/_resume.scss
+++ b/css/_resume.scss
@@ -8,7 +8,14 @@
 //     margin-top: 3.5rem;
 // }
 
+.content {
+    font-family: $Merriweather;
+}
 
+ul {
+    font-size: 0.9em;
+
+}
 
 #experience, #technical-skills, #projects, #other-interests {
     margin-top: 3.5rem;
