--- a/css/_base.scss
+++ b/css/_base.scss
@@ -131,3 +131,14 @@ main a:hover {
 //     background-repeat: repeat-x;
 //     text-decoration: none;
 // }
+
+@media screen and (min-width: $screen-lg-min) {
+    .content {
+        max-width: 1152px;
+    }
+}
+@media screen and (min-width: $screen-xl-min) {
+    .content {
+        max-width: 1344px;
+    }
+}
