First blog post.

--- a/templates/default.html
+++ b/templates/default.html
@@ -57,13 +57,16 @@
                     <a href="http://jaspervdj.be/hakyll">Hakyll</a>
                     and
                     <a href="https://sass-lang.com/">Sass</a>.
-                    Ideas borrowed from
-                    <a href="https://sascha-kirch.github.io/">sascha-kirch.github.io</a>,
-                    <a href="https://justinmanley.work/">justinmanley.work</a> and
-                    <a href="https://joeahand.com/">joeahand.com</a>.
                     <br>
-                    Last Build: Feburary 12, 2023
+                    Inspirations from
+                    <a href="https://sascha-kirch.github.io/">sascha kirch</a>,
+                    <a href="https://justinmanley.work/">justinmanley</a> and
+                    <a href="https://joeahand.com/">joeahand</a>.
                     <br>
+                    <!-- modify this to be dynamic instead of being static -->
+                    <!-- Last Build: Feburary 12, 2023 -->
+                    <!-- Last Build: {{ site.time | date: '%B %d, %Y' }} -->
+                    <!-- <br> -->
                     Creative Commons License
                     <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
                         <i class="fa fa-creative-commons fa-lg" aria-hidden="true"></i>
