--- a/templates/post.html
+++ b/templates/post.html
@@ -1,8 +1,10 @@
 <div class="info">
-    Posted on $date$
+    $date$
+    <br>
     $if(author)$
-        by $author$
+        Author: $author$
     $endif$
 </div>
 
+<hr>
 $body$
